@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.595 2012/05/14 21:17:26 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.596 2012/05/15 14:12:51 jer Exp $
+
+  15 May 2012; Jeroen Roovers <jer@gentoo.org> python-2.6.8.ebuild,
+  python-3.1.5.ebuild, python-3.2.3.ebuild:
+  Stable for HPPA (bug #396329).
 
   14 May 2012; Jeroen Roovers <jer@gentoo.org> python-2.7.3-r1.ebuild:
   Stable for HPPA (bug #396329).
